--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Yazan Al Sedih",
+  "author": "Yazan Al-Sedih",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.1",
+    "mysql2": "^3.9.2",
     "sequelize": "^6.37.1",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.4"
@@ -25,4 +25,3 @@
     "nodemon": "^3.0.3"
   }
 }
-
